tests/sksl/errors/SwitchVariableScope.glsl
### Compilation failed:

error: 10: unknown identifier 'x'
    return x + y;
           ^
error: 10: unknown identifier 'y'
    return x + y;
               ^
2 errors
